--- a/main.css
+++ b/main.css
@@ -13,8 +13,7 @@ body {
 
 .nav .nav-link,
 .navbar-brand,
-.navbar-brand:hover,
-.navbar-brand:focus {
+.navbar-brand:hover {
   color: #fff;
 }
 
@@ -31,10 +30,10 @@ body {
   font-family: Pacifico, cursive;
 }
 
-.section-title span {
-  color: #e15f41;
-}
-
 #sobre-o-restaurante {
   background-color: #ffeae6;
+}
+
+.text-colored {
+  color: #e15f41;
 }
