--- a/main.css
+++ b/main.css
@@ -13,8 +13,7 @@ body {
 
 #cabecalho .nav .nav-link,
 .navbar-brand,
-.navbar-brand:hover,
-.nav-cardapio .nav-link.active:hover {
+.navbar-brand:hover {
   color: #fff;
 }
 
@@ -40,11 +39,26 @@ body {
   color: #e15f41;
 }
 
-.nav-cardapio .nav-link.active {
+.nav-cardapio .nav-link.active,
+#fale-conosco button {
   background-color: #e15f41;
   color: #fff;
 }
 
 .nav-cardapio .nav-link:hover {
   color: #e15f41;
+}
+
+.social-links li {
+  list-style: none;
+  display: inline;
+}
+
+.social-links a {
+  text-decoration: none;
+}
+
+#fale-conosco button:hover {
+  background-color: #bf5037;
+  color: #fff;
 }
