--- a/main.css
+++ b/main.css
@@ -13,7 +13,8 @@ body {
 
 #cabecalho .nav .nav-link,
 .navbar-brand,
-.navbar-brand:hover {
+.navbar-brand:hover,
+.nav-cardapio .nav-link.active:hover { 
   color: #fff;
 }
 
@@ -61,4 +62,10 @@ body {
 #fale-conosco button:hover {
   background-color: #bf5037;
   color: #fff;
+}
+
+@media (max-width: 767px) {
+  .carousel-item img {
+    height: 280px;
+  }
 }
